tests/ui/nll/closure-malformed-projection-input-issue-102800.stderr
error: higher-ranked subtype error
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:12
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/closure-malformed-projection-input-issue-102800.rs:18:12
   |
LL |     let _: for<'a> fn(<&'a () as Trait>::Ty) = |_| {};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

